    * 0382 Active HTTP check now supports multiline regexp matching...
    * 0112 Explicit mapping of clustered services can now be done with WATO...
    * 0437 Convert WATO rule for debug_log into simple Checkbox...
    * 0428 Changed user profiles (e.g. pw changes) are now replicated in distributed setups...
    * 0114 User Custom Attributes can now be exported to the core...
    * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
    * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
    * 0019 FIX: Fixed wording in WATO rule for MSSQL check
    * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
    * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
    * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...
    * 0330 FIX: Improved performance of WATO slave push with a large user base...
    * 0331 FIX: LDAP diagnostic LOG can now have the $OMD_SITE$ macro configured via WATO...
    * 0332 FIX: Own host tag groups without topics resulted in two groups "Host tags" in the rule editor
    * 0361 FIX: The page linked by "new rule" can now be bookmarked again
    * 0341 FIX: Avoid rare exception in WATO when deleting a host...
    * 0376 FIX: LDAP: Default configuration of attributes is reflected within WATO now
    * 0346 FIX: Fix folder visibility in WATO for unpriviledged users...
    * 0385 FIX: Better error handling for invalid service regex in rule conditions...
    * 0389 FIX: Showing LDAP settings on site specific global settings page now...
    * 0400 FIX: WATO BI editor now supports percentages for count_ok...
    * 0392 FIX: LDAP: Improved error messages of LDAP configuration test...
    * 0415 FIX: LDAP: The LDAP Settings dialog is now disabled when the LDAP Connector is disabled
    * 0416 FIX: When doing user sync on user page rendering, contact group memberships are shown correctly now...