@@ -150,6 +150,7 @@
     * 0437 Convert WATO rule for debug_log into simple Checkbox...
     * 0428 Changed user profiles (e.g. pw changes) are now replicated in distributed setups...
     * 0114 User Custom Attributes can now be exported to the core...
+    * 0448 New button in WATO service list for displaying check parameters...
     * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
     * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
     * 0019 FIX: Fixed wording in WATO rule for MSSQL check
